@@ -24,6 +24,7 @@ ansi.test \
 ansi2.test \
 ansi3.test \
 ansi4.test \
+asm.test \
 auxdir.test \
 backsl.test \
 backsl2.test \
