@@ -1,5 +1,11 @@
 2001-05-08  Tom Tromey  <tromey@redhat.com>
 
+	Fix for PR automake/36:
+	* tests/Makefile.am (TESTS): Added asm.test.
+	* tests/asm.test: New file.
+	* automake.in (asm): Use ASFLAGS and AS.
+	(lang_asm_finish): New sub.
+
 	* automake.in (read_am_file): Removed debugging code.
 
 	For PR automake/149:
